--- a/DuelOfReigns/index.html
+++ b/DuelOfReigns/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/src/assets/images/crown.png"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <script
-            async
-            src="https://js.stripe.com/v3/buy-button.js">
-    </script>
+    <script src="https://js.stripe.com/v3/"></script>
     <title>Duel Of Reigns</title>
 </head>
 <body>
